login error message style completed

--- a/src/app/main/content/add-task/add-task.component.scss
+++ b/src/app/main/content/add-task/add-task.component.scss
@@ -44,10 +44,10 @@ form {
   }
 }
 
-.error-message {
-  @include font($fs: 10px, $fw: 400);
-  color: $red;
-}
+// .error-message {
+//   @include font($fs: 10px, $fw: 400);
+//   color: $red;
+// }
 
 /*linkes Div*/
 .content {
