--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -8,6 +8,7 @@
     <h1>Kanban Project Management Tool</h1>
   </div>
   <div class="header-right">
+    @if(authService.isUserLoggedIn) {
     <a
       class="help-link"
       [ngClass]="{ active: navigationService.selectedItem === 6 }"
@@ -17,7 +18,9 @@
     <div (click)="toggleOverlay()" [class.open]="isOpen" class="initials-btn">
       <p>ID</p>
     </div>
-    <div *ngIf="isOpen" (click)="closeOverlay()" class="toggleOff-container">
+
+    @if (isOpen) {
+    <div (click)="closeOverlay()" class="toggleOff-container">
       <div id="overlay" [class.open]="isOpen" class="header-overlay">
         <div class="inner-overlay">
           <a
@@ -26,22 +29,20 @@
             (click)="selectItem(6)"
             >Help</a
           >
-
           <a
             [ngClass]="{ active: navigationService.selectedItem === 5 }"
             (click)="selectItem(5)"
             >Legal Notice</a
           >
-
           <a
             [ngClass]="{ active: navigationService.selectedItem === 4 }"
             (click)="selectItem(4)"
             >Privacy Policy</a
           >
-
           <a (click)="authService.logout()">Log out</a>
         </div>
       </div>
     </div>
+    } }
   </div>
 </section>
