--- a/src/app/main/login/signup/signup.component.html
+++ b/src/app/main/login/signup/signup.component.html
@@ -14,23 +14,33 @@
           id="signUp-name"
           name="name"
           placeholder="Name"
-          pattern="[a-zA-Z0-9._%+\-]+@[a-zA-Z0-9.\-]+\.[a-zA-Z]{2,}"
+          pattern="[a-zA-ZäüößÄÜÖ\s]{3,}"
           #nameSignUp
         />
         <img src="assets/img/icons/person.svg" />
       </div>
-      <div class="signUp-email">
+      <div 
+        class="signUp-email"
+        [ngClass]="{ 'input-focused': focusedInput === 'email' }"
+        [ngClass]="{ 'input-invalid': !isEmailValid }"
+      >
         <input
           type="text"
           id="signUp-email"
           name="email"
           placeholder="Email"
           pattern="[a-zA-Z0-9._%+\-]+@[a-zA-Z0-9.\-]+\.[a-zA-Z]{2,}"
+          (focus)="onFocus('email')"
+          (blur)="onBlur()"
           #emailSignUp
         />
         <img src="assets/img/icons/mail.svg" />
       </div>
-      <div class="signUp-password">
+      <div 
+        class="signUp-password"
+        [ngClass]="{ 'input-focused': focusedInput === 'password' }"
+        [ngClass]="{ 'input-invalid': !isPasswordValid }"
+      >
         <input
           type="text"
           id="signUp-password"
@@ -41,16 +51,42 @@
         />
         <img src="assets/img/icons/lock_icon.svg" />
       </div>
-      <div class="confirm-password">
+      <div 
+        class="confirm-password"
+        [ngClass]="{ 'input-focused': focusedInput === 'password' }"
+        [ngClass]="{ 'input-invalid': !isPasswordValid }"
+      >
         <input
           type="text"
           id="confirm-password"
           name="confirm-password"
           placeholder="confirm-Password"
           pattern="^(?=.*[A-Z])(?=.*\d)(?=.*[^\w]).{8,20}$"
+          (focus)="onFocus('password')"
+          (blur)="onBlur()"
           #pwConfirmSignUp
         />
-        <img src="assets/img/icons/lock_icon.svg" />
+        <img 
+          class="lock"
+          src="assets/img/icons/lock_icon.svg"
+          [ngClass]="{ d_none: passwordFieldActive }"
+        />
+        @if(passwordFieldActive) {
+          <img
+            class="visibility_off"
+            src="assets/img/icons/visibility_off_icon.svg"
+            [ngClass]="{ d_none: !passwordFieldActive }"
+            [ngClass]="{ d_none: !isVisibility }"
+            (click)="toggleVisibility()"
+          />
+          <img
+            class="visibility_off"
+            src="assets/img/icons/visibility_icon.svg"
+            [ngClass]="{ d_none: !passwordFieldActive }"
+            [ngClass]="{ d_none: isVisibility }"
+            (click)="toggleVisibility()"
+          />
+          }
       </div>
       <div class="policy-checkbox-container">
         <input type="checkbox">
