added login/singup/contetn navi

--- a/src/app/main/login/login.component.html
+++ b/src/app/main/login/login.component.html
@@ -91,7 +91,7 @@
 
   <div class="sign-up">
     <p>Not a Join user?</p>
-    <button (click)="authService.login(emailLogin.value, pwLogin.value)">
+    <button (click)="linkSignUp()">
       Sign up
     </button>
   </div>
