--- a/src/app/main/content/content.component.html
+++ b/src/app/main/content/content.component.html
@@ -1,7 +1,7 @@
 <section>
   <div>
     <app-header></app-header>
-
+    @if(authService.isUserLoggedIn){
     <app-summary
       id="summary-section"
       [ngClass]="{ active: navigationService.selectedItem === 0 }"
@@ -18,7 +18,7 @@
       id="contacts-section"
       [ngClass]="{ active: navigationService.selectedItem === 3 }"
     ></app-contacts>
-
+    }
     <app-policy
       id="policy-section"
       [ngClass]="{ active: navigationService.selectedItem === 4 }"
@@ -30,12 +30,13 @@
       [ngClass]="{ active: navigationService.selectedItem === 5 }"
     >
     </app-imprint>
-    
+    @if(authService.isUserLoggedIn){
     <app-help
       id="help-section"
-      [ngClass]="{ active: navigationService.selectedItem === 6 }"      
-    > Test
+      [ngClass]="{ active: navigationService.selectedItem === 6 }"
+    >
     </app-help>
+    }
   </div>
 
   <app-footer></app-footer>
