validateInput() function added to login component and first attempt at one-time summary animation

--- a/src/app/main/content/summary/summary.component.html
+++ b/src/app/main/content/summary/summary.component.html
@@ -56,7 +56,10 @@
         </div>
       </div>
     </div>
-    <div class="right fade-out">
+    <div
+      class="right"
+      [ngClass]="{ 'fade-out': !navigationService.isAnimationSummarydone }"
+    >
       @if(authService.name && authService.name !== 'Guest'){
       <span class="greeting">{{ getGreeting() }},</span>
       <span class="greetingName">{{ authService.name }}</span>
