--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -40,7 +40,7 @@
         >
       </li>
       } @else{
-      <li (click)="selectItem(0)">
+      <li (click)="linkLogin()">
         <a
           ><div class="icon-section login"></div>
           Log In</a
