--- a/src/app/main/login/login.component.html
+++ b/src/app/main/login/login.component.html
@@ -8,6 +8,7 @@
 
   <!-- <div class="header-section"></div> -->
 
+  @if (isContentVisible) {
   <div class="login-section">
     <h1>Log in</h1>
     <div class="border-blue"></div>
@@ -102,4 +103,5 @@
       >Legal Notice</a
     >
   </div>
+}
 </section>
