--- a/src/app/main/login/signup/signup.component.html
+++ b/src/app/main/login/signup/signup.component.html
@@ -7,14 +7,16 @@
     <a class="back-btn" (click)="linkLogin()"></a>
     <h1>Sign up</h1>
     <div class="border-blue"></div>
-    <form>
+    <form #contactForm="ngForm">
       <div class="signUp-name">
         <input
           type="text"
           id="signUp-name"
           name="name"
           placeholder="Name"
-          pattern="[a-zA-ZäüößÄÜÖ\s]{3,}"
+          (focus)="onFocus('name')"
+          (blur)="onBlur()"
+          [(ngModel)]="name"
           #nameSignUp
         />
         <img src="assets/img/icons/person.svg" />
@@ -29,9 +31,9 @@
           id="signUp-email"
           name="email"
           placeholder="Email"
-          pattern="[a-zA-Z0-9._%+\-]+@[a-zA-Z0-9.\-]+\.[a-zA-Z]{2,}"
           (focus)="onFocus('email')"
           (blur)="onBlur()"
+          [(ngModel)]="email"
           #emailSignUp
         />
         <img src="assets/img/icons/mail.svg" />
@@ -42,28 +44,60 @@
         [ngClass]="{ 'input-invalid': !isPasswordValid }"
       >
         <input
-          type="text"
+          [type]="passwordVisible ? 'text' : 'password'"
           id="signUp-password"
           name="password"
           placeholder="Password"
-          pattern="^(?=.*[A-Z])(?=.*\d)(?=.*[^\w]).{8,20}$"
+          (focus)="onFocus('password')"
+          (blur)="onBlur()"
+          [(ngModel)]="password"
           #pwSignUp
         />
-        <img src="assets/img/icons/lock_icon.svg" />
+        <img
+          class="lock" 
+          src="assets/img/icons/lock_icon.svg"
+          [ngClass]="{ d_none: passwordFieldActive }" 
+        />
+        @if(passwordFieldActive) {
+          <img
+            class="visibility_off"
+            src="assets/img/icons/visibility_off_icon.svg"
+            [ngClass]="{ d_none: !passwordFieldActive }"
+            [ngClass]="{ d_none: !isVisibility }"
+            (click)="toggleVisibility()"
+          />
+          <img
+            class="visibility_off"
+            src="assets/img/icons/visibility_icon.svg"
+            [ngClass]="{ d_none: !passwordFieldActive }"
+            [ngClass]="{ d_none: isVisibility }"
+            (click)="toggleVisibility()"
+          />
+          }
       </div>
+      <!-- Check if a login attempt has been made and if the email or password do not match the required patterns -->
+      @if(signUpAttempted && (eMailPattern.test(this.email) != true ||
+      pwPattern.test(this.password) != true || namePattern.test(this.name)) ) {
+      <div class="error-message">
+        <p>
+          Check your name, email and password! Please try again.<br />(min 6 character
+          - min 1 special character, 1 capital letter, 1 number).
+        </p>
+      </div>
+      }
       <div
         class="confirm-password"
         [ngClass]="{ 'input-focused': focusedInput === 'password' }"
         [ngClass]="{ 'input-invalid': !isPasswordValid }"
       >
         <input
-          type="text"
+        [type]="confirmPasswordVisible ? 'text' : 'password'"
           id="confirm-password"
           name="confirm-password"
-          placeholder="confirm-Password"
-          pattern="^(?=.*[A-Z])(?=.*\d)(?=.*[^\w]).{8,20}$"
+          placeholder="Confirm Password"
           (focus)="onFocus('password')"
           (blur)="onBlur()"
+          [(ngModel)]="confirmPassword"
           #pwConfirmSignUp
         />
         <img
@@ -88,6 +122,14 @@
         />
         }
       </div>
+      @if(signUpAttempted && (eMailPattern.test(this.email) != true ||
+      pwPattern.test(this.password) != true || namePattern.test(this.name) != true) ) {
+      <div class="error-message">
+        <p>
+          Your passwords don't match. Please try again..
+        </p>
+      </div>
+      }
       <div class="policy-checkbox-container">
         <input type="checkbox" />
         <p>I accept the <span class="join-aqua">Privacy policy</span></p>
@@ -95,13 +137,7 @@
       <div class="btn-section">
         <button
           class="btn-signUp"
-          (click)="
-            authService.signUp(
-              emailSignUp.value,
-              pwSignUp.value,
-              nameSignUp.value
-            )
-          "
+          (click)="onSignUpClick()"
         >
           Sign up
         </button>
