--- a/src/app/main/login/signup/signup.component.scss
+++ b/src/app/main/login/signup/signup.component.scss
@@ -36,7 +36,7 @@ h1 {
     flex-direction: column;
     width: 93%;
     max-width: 652px;
-    height: 640px;
+    height: auto;
     background-color: $white;
     border: unset;
     border-radius: 30px;
@@ -213,6 +213,7 @@ h1 {
 @media (max-width: 480px) {
     h1{
         font-size: 32px;
+        white-space: nowrap;
     }
 
     .border-blue {
