--- a/src/app/main/login/signup/signup.component.scss
+++ b/src/app/main/login/signup/signup.component.scss
@@ -1,222 +1,229 @@
 @import "./../../../../styles.scss";
 
 section {
-    @include dFlex($jc: space-between, $g: 50px);
-    flex-direction: column;
-    height: 100vh;
-    position: relative;
-
+  @include dFlex($jc: space-between, $g: 50px);
+  flex-direction: column;
+  height: 100vh;
+  position: relative;
 }
 
 .header-section {
-    @include dFlex($jc: space-between, $ai: flex-start);
-    padding-top: 50px;
-    padding-left: 50px;
-    padding-right: 50px;
-    width: 100%;
+  @include dFlex($jc: space-between, $ai: flex-start);
+  padding-top: 48px;
+  padding-left: 48px;
+  padding-right: 48px;
+  width: 100%;
 
-    .logo {
-        width: 100.03px;
-        height: 121.97px;
-    }
+  .logo {
+    width: 100px;
+    height: 122px;
+  }
 }
 
 h1 {
-    @include font($fs: 47px, $fw: 700);
+  @include font($fs: 47px, $fw: 700);
 }
 
 .border-blue {
-    width: 150px;
-    border-bottom: 3px solid $aqua;
-    border-radius: 3px;
+  width: 150px;
+  border-bottom: 3px solid $aqua;
+  border-radius: 3px;
 }
 
 .signUp-section {
+  @include dFlex($g: 30px);
+  flex-direction: column;
+  width: 93%;
+  max-width: 652px;
+  height: auto;
+  background-color: $white;
+  border: unset;
+  border-radius: 30px;
+  padding: 48px 115px;
+
+  position: relative;
+
+  > .back-btn {
+    position: absolute;
+    top: 64px;
+    left: 56px;
+    background-image: url("./../../../../assets/img/icons/arrow_left.svg");
+    height: 32px;
+    width: 32px;
+    &:hover {
+      border-radius: 16px;
+      background-color: $hover_gray;
+      transform: scale(1.15);
+    }
+  }
+
+  form {
     @include dFlex($g: 30px);
     flex-direction: column;
-    width: 93%;
-    max-width: 652px;
-    height: auto;
-    background-color: $white;
-    border: unset;
-    border-radius: 30px;
-    padding: 48px 115px;
+  }
 
-    position: relative;
-    
-    >.back-btn {
-        position: absolute;
-        top: 64px;
-        left: 56px;
-        background-image: url("./../../../../assets/img/icons/arrow_left.svg");
-        height: 32px;
-        width: 32px;
-        &:hover {
-            border-radius: 16px;
-            background-color: $hover_gray;
-            transform: scale(1.15);
-        } 
+  .signUp-name,
+  .signUp-email,
+  .signUp-password,
+  .confirm-password {
+    @include dFlex($jc: space-between, $g: 10px);
+    width: 64.72vw;
+    max-width: 422px;
+    height: 48px;
+    border: 1px solid $light_gray;
+    border-radius: 10px;
+    padding: 12px 21px;
+    cursor: text;
+
+    > img {
+      width: 24px;
+      height: 24px;
     }
 
-    form {
-        @include dFlex($g: 30px);
-        flex-direction: column;
+    > input {
+      // flex: 1;
+      width: 80%;
+      border: unset;
+      height: 24px;
+      @include font($fs: 20px, $fw: 400);
+
+      &:focus {
+        border: unset;
+        outline: none;
+      }
+
+      &::placeholder {
+        @include font($fs: 20px, $fw: 400);
+        color: $light_gray;
+      }
     }
-
-    .signUp-name,
-    .signUp-email,
-    .signUp-password,
-    .confirm-password {
-        @include dFlex($jc: space-between, $g: 10px);
-        width: 64.72vw;
-        max-width: 422px;
-        height: 48px;
-        border: 1px solid $light_gray;
-        border-radius: 10px;
-        padding: 12px 21px;
-        cursor: text;
-
-        >img {
-            width: 24px;
-            height: 24px;
-        }
-
-        >input {
-            // flex: 1;
-            width: 80%;
-            border: unset;
-            height: 24px;
-            @include font($fs: 20px, $fw: 400);
-
-            &:focus {
-                border: unset;
-                outline: none;
-            }
-
-            &::placeholder {
-                @include font($fs: 20px, $fw: 400);
-                color: $light_gray;
-            }
-        }
-    }  
+  }
 }
 
 .back-btn {
-    background-image: url("./../../../../assets/img/icons/arrow_left.svg");
-    height: 37px;
-    width: 37px;
+  background-image: url("./../../../../assets/img/icons/arrow_left.svg");
+  height: 37px;
+  width: 37px;
 }
 
 .btn-section {
-    @include dFlex($g: 30px);
-    margin-top: 50px;
+  @include dFlex($g: 30px);
+  margin-top: 50px;
 
-    .btn-signUp {
-        @include dFlex();
-        @include font($fs: 21px, $fw: 700);
-        height: 48px;
-        color: $white;
-        padding: 15px 24px;
-        border: unset;
-        border-radius: 8px;
-        background-color: $dark_blue;
-        cursor: pointer;
+  .btn-signUp {
+    @include dFlex();
+    @include font($fs: 21px, $fw: 700);
+    height: 48px;
+    color: $white;
+    padding: 15px 24px;
+    border: unset;
+    border-radius: 8px;
+    background-color: $dark_blue;
+    cursor: pointer;
 
-        &:hover {
-            background-color: $light_blue;
-            box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-            border: unset;
-        }
+    &:hover {
+      background-color: $light_blue;
+      box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+      border: unset;
     }
+  }
 }
 
 .join-aqua {
-    color: $aqua;
+  color: $aqua;
 }
 
 .policy-checkbox-container {
-    @include dFlex($jc: space-between);
-    max-width: 240px;
-    gap: 10px;
+  @include dFlex($jc: space-between);
+  max-width: 240px;
+  gap: 10px;
 
-    >input {
-        border-color: $dark_blue;
-        border-width: 4px;
-        border-style: solid;
-        height: 16px;
-        padding: 0;
-        &:hover {
-            cursor: pointer;
-            background-color: $gray;
-        }
+  > input {
+    border-color: $dark_blue;
+    border-width: 4px;
+    border-style: solid;
+    height: 16px;
+    padding: 0;
+    &:hover {
+      cursor: pointer;
+      background-color: $gray;
     }
+  }
 
-    >p {
-        color: $light_gray;
-        >span {
-            &:hover {
-                cursor: pointer;
-            }
-        }
+  > p {
+    color: $light_gray;
+    > span {
+      &:hover {
+        cursor: pointer;
+      }
     }
-
-    
+  }
 }
 
 .policy-checkbox {
-    height: 20px;
-    width: 20px;
-    padding: 4px;
-    cursor: pointer;
+  height: 20px;
+  width: 20px;
+  padding: 4px;
+  cursor: pointer;
 }
 
 .footer-section {
-    @include dFlex($g: 40px);
-    padding-bottom: 30px;
+  @include dFlex($g: 40px);
+  padding-bottom: 30px;
 
-    >a {
-        @include font($fs: 16px, $fw: 400);
-        color: $gray;
-        cursor: pointer;
-    }
+  > a {
+    @include font($fs: 16px, $fw: 400);
+    color: $gray;
+    cursor: pointer;
+  }
 }
 
 .lock,
-    .visibility_off {
-      cursor: pointer;
-    }
+.visibility_off {
+  cursor: pointer;
+}
 /*--------------------------------------------------   Desktop   --------------------------------------------------*/
 @media (min-width: 1024px) {
+  .signUp-section {
+    width: 45.28vw;
 
-    .signUp-section {
-        width: 45.28vw;
-
-        >h1 {
-            @include font($fs: 61px, $fw: 700);
-        }
+    > h1 {
+      @include font($fs: 61px, $fw: 700);
     }
+  }
 
-    .sign-up {
-        position: absolute;
-        top: 50px;
-        right: 50px;
+  .sign-up {
+    position: absolute;
+    top: 50px;
+    right: 50px;
 
-        >button {
-            &:hover {
-                background-color: $light_blue;
-                box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-            }
-        }
+    > button {
+      &:hover {
+        background-color: $light_blue;
+        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+      }
     }
+  }
 }
 
 @media (max-width: 480px) {
-    h1{
-        font-size: 32px;
-        white-space: nowrap;
-    }
+  h1 {
+    font-size: 32px;
+    white-space: nowrap;
+  }
 
-    .border-blue {
-        width: 100px;
+  .border-blue {
+    width: 100px;
+  }
+
+  .header-section {
+    padding-top: 36px;
+    padding-left: 36px;
+    padding-right: 36px;
+
+    .logo {
+      width: 64px;
+      height: 78px;
     }
+  }
 }
