--- a/src/app/main/login/login.component.html
+++ b/src/app/main/login/login.component.html
@@ -81,7 +81,12 @@
       }
       <div class="btn-section">
         <button class="btn-login" (click)="onLoginClick()">Log in</button>
-        <button class="btn-guest-login">Guest Log in</button>
+        <button
+          class="btn-guest-login"
+          (click)="loginUser('guest@test.de', 'Guest1?')"
+        >
+          Guest Log in
+        </button>
       </div>
     </form>
   </div>
@@ -103,5 +108,5 @@
       >Legal Notice</a
     >
   </div>
-}
+  }
 </section>
