--- a/src/app/main/login/signup/signup.component.scss
+++ b/src/app/main/login/signup/signup.component.scss
@@ -149,10 +149,10 @@ h1 {
       background-color: $gray;
     }
   }
-
-  > p {
+  
+  >div p{
     color: $light_gray;
-    > span {
+    span {
       &:hover {
         cursor: pointer;
       }
