feat(signup): Add toast message for successful registration

--- a/src/app/main/login/signup/signup.component.html
+++ b/src/app/main/login/signup/signup.component.html
@@ -175,4 +175,10 @@
       >Legal Notice</a
     >
   </div>
+
+  @if(showSignUpSuccess) {
+    <div class="toast-message">
+      <span>You Signed Up successfully</span>
+    </div>
+    }
 </section>
