--- a/src/app/main/login/signup/signup.component.html
+++ b/src/app/main/login/signup/signup.component.html
@@ -8,7 +8,11 @@
     <h1>Sign up</h1>
     <div class="border-blue"></div>
     <form #signUpForm="ngForm">
-      <div class="signUp-name">
+      <div 
+        class="signUp-name"
+        [ngClass]="{ 'input-focused': focusedInput === 'name' }"
+        [ngClass]="{ 'input-invalid': !isNameValid }"
+      >
         <input
           type="text"
           id="signUp-name"
